[project]
name = "random"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.4",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
]
